// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render 1`] = `
.c0.c0.c0.c0.c0 {
  text-align: left;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  margin-top: 2px;
}

.c3.c3.c3.c3.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 4px;
  padding-left: 8px;
}

.c4.c4.c4.c4.c4 {
  margin-top: 2px;
}

.c1.c1.c1.c1.c1 {
  background: hsla(211,20%,52%,0.09);
  padding: 12px;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: 584px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  box-sizing: border-box;
}

.c6.c6.c6.c6.c6 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(211,22%,56%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c6.c6.c6.c6.c6:hover:not([disabled]) {
  color: hsla(211,26%,34%,1);
  background-color: transparent;
}

.c6.c6.c6.c6.c6:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  color: hsla(211,26%,34%,1);
}

.c6.c6.c6.c6.c6:active {
  color: hsla(211,26%,34%,1);
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="alert"
    role="status"
  >
    <div
      class="c0 c1"
      data-blade-component="base-box"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
            data-blade-component="svg-path"
            fill="hsla(211, 33%, 21%, 1)"
          />
          <path
            d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
            data-blade-component="svg-path"
            fill="hsla(211, 33%, 21%, 1)"
          />
          <path
            clip-rule="evenodd"
            d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
            data-blade-component="svg-path"
            fill="hsla(211, 33%, 21%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            Currently you can only accept payments in international currencies using PayPal.
          </p>
        </div>
      </div>
      <button
        aria-label="Dismiss alert"
        class="c6"
        data-blade-component="icon-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="20px"
          viewBox="0 0 24 24"
          width="20px"
        >
          <path
            d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
            data-blade-component="svg-path"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should render positive color and full width 1`] = `
.c0.c0.c0.c0.c0 {
  text-align: left;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-top: 2px;
}

.c3.c3.c3.c3.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 12px;
  padding-left: 12px;
}

.c4.c4.c4.c4.c4 {
  margin-top: 2px;
}

.c1.c1.c1.c1.c1 {
  background: hsla(150,100%,32%,0.09);
  padding: 12px;
  border-radius: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: auto;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6.c6.c6.c6.c6 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(211,22%,56%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c6.c6.c6.c6.c6:hover:not([disabled]) {
  color: hsla(211,26%,34%,1);
  background-color: transparent;
}

.c6.c6.c6.c6.c6:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  color: hsla(211,26%,34%,1);
}

.c6.c6.c6.c6.c6:active {
  color: hsla(211,26%,34%,1);
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="alert"
    role="status"
  >
    <div
      class="c0 c1"
      data-blade-component="base-box"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M4.15845 7.14673C6.74812 4.11682 11.0222 3.15114 14.663 4.77337C15.1675 4.99815 15.7586 4.77141 15.9834 4.26694C16.2082 3.76247 15.9815 3.17129 15.477 2.94651C11.0272 0.963789 5.80325 2.14407 2.6381 5.84729C-0.527049 9.55051 -0.879431 14.8945 1.77205 18.9813C4.42353 23.0681 9.44725 24.9241 14.1189 23.5428C18.7905 22.1615 21.9972 17.8715 22 12.9999V12.0699C22 11.5177 21.5523 11.0699 21 11.0699C20.4477 11.0699 20 11.5177 20 12.0699V12.9994C19.9977 16.9852 17.3741 20.4948 13.5518 21.6249C9.72957 22.755 5.61926 21.2364 3.44986 17.8927C1.28047 14.549 1.56878 10.1766 4.15845 7.14673Z"
            data-blade-component="svg-path"
            fill="hsla(150, 100%, 27%, 1)"
          />
          <path
            d="M22.7071 4.70705C23.0976 4.31652 23.0976 3.68336 22.7071 3.29283C22.3166 2.90231 21.6834 2.90231 21.2929 3.29283L11 13.5857L8.70711 11.2928C8.31658 10.9023 7.68342 10.9023 7.29289 11.2928C6.90237 11.6834 6.90237 12.3165 7.29289 12.707L10.2929 15.707C10.6834 16.0976 11.3166 16.0976 11.7071 15.707L22.7071 4.70705Z"
            data-blade-component="svg-path"
            fill="hsla(150, 100%, 27%, 1)"
          />
        </svg>
      </div>
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            Currently you can only accept payments in international currencies using PayPal.
          </p>
        </div>
      </div>
      <button
        aria-label="Dismiss alert"
        class="c6"
        data-blade-component="icon-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="20px"
          viewBox="0 0 24 24"
          width="20px"
        >
          <path
            d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
            data-blade-component="svg-path"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Alert /> should render positive color and full width 2`] = `
.c0.c0.c0.c0.c0 {
  text-align: left;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-top: 2px;
}

.c3.c3.c3.c3.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding-right: 12px;
  padding-left: 12px;
}

.c4.c4.c4.c4.c4 {
  margin-top: 2px;
}

.c1.c1.c1.c1.c1 {
  background: hsla(150,100%,32%,0.09);
  padding: 12px;
  border-radius: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  max-width: auto;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
}

.c6.c6.c6.c6.c6 {
  border: none;
  cursor: pointer;
  padding: 0;
  border-radius: 2px;
  background: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: hsla(211,22%,56%,1);
  -webkit-transition-property: color,box-shadow;
  transition-property: color,box-shadow;
  -webkit-transition-duration: 160ms;
  transition-duration: 160ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c6.c6.c6.c6.c6:hover:not([disabled]) {
  color: hsla(211,26%,34%,1);
  background-color: transparent;
}

.c6.c6.c6.c6.c6:focus-visible {
  outline: 4px solid hsla(227,100%,59%,0.18);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  color: hsla(211,26%,34%,1);
}

.c6.c6.c6.c6.c6:active {
  color: hsla(211,26%,34%,1);
}

.c5.c5.c5.c5.c5 {
  color: hsla(211,26%,34%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.125rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin: 0;
  padding: 0;
}

<div>
  <div
    class=""
    data-blade-component="alert"
    role="status"
  >
    <div
      class="c0 c1"
      data-blade-component="base-box"
    >
      <div
        class="c2"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            d="M4.15845 7.14673C6.74812 4.11682 11.0222 3.15114 14.663 4.77337C15.1675 4.99815 15.7586 4.77141 15.9834 4.26694C16.2082 3.76247 15.9815 3.17129 15.477 2.94651C11.0272 0.963789 5.80325 2.14407 2.6381 5.84729C-0.527049 9.55051 -0.879431 14.8945 1.77205 18.9813C4.42353 23.0681 9.44725 24.9241 14.1189 23.5428C18.7905 22.1615 21.9972 17.8715 22 12.9999V12.0699C22 11.5177 21.5523 11.0699 21 11.0699C20.4477 11.0699 20 11.5177 20 12.0699V12.9994C19.9977 16.9852 17.3741 20.4948 13.5518 21.6249C9.72957 22.755 5.61926 21.2364 3.44986 17.8927C1.28047 14.549 1.56878 10.1766 4.15845 7.14673Z"
            data-blade-component="svg-path"
            fill="hsla(150, 100%, 27%, 1)"
          />
          <path
            d="M22.7071 4.70705C23.0976 4.31652 23.0976 3.68336 22.7071 3.29283C22.3166 2.90231 21.6834 2.90231 21.2929 3.29283L11 13.5857L8.70711 11.2928C8.31658 10.9023 7.68342 10.9023 7.29289 11.2928C6.90237 11.6834 6.90237 12.3165 7.29289 12.707L10.2929 15.707C10.6834 16.0976 11.3166 16.0976 11.7071 15.707L22.7071 4.70705Z"
            data-blade-component="svg-path"
            fill="hsla(150, 100%, 27%, 1)"
          />
        </svg>
      </div>
      <div
        class="c3"
        data-blade-component="base-box"
      >
        <div
          class="c4"
          data-blade-component="base-box"
        >
          <p
            class="c5"
            data-blade-component="text"
          >
            Currently you can only accept payments in international currencies using PayPal.
          </p>
        </div>
      </div>
      <button
        aria-label="Dismiss alert"
        class="c6"
        data-blade-component="icon-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="20px"
          viewBox="0 0 24 24"
          width="20px"
        >
          <path
            d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
            data-blade-component="svg-path"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
